docs: fix dark mode

--- a/docs/src/styles/global.less
+++ b/docs/src/styles/global.less
@@ -1,7 +1,6 @@
 body {
   -webkit-tap-highlight-color: transparent;
   --tw-bg-opacity: 1;
-  background-color: hsl(var(--b1) / var(--tw-bg-opacity));
 }
 
 code.hljs {
